RESOLVED FIXED85828
Correct logical error in accessibilityIsIgnored.
https://bugs.webkit.org/show_bug.cgi?id=85828
Summary Correct logical error in accessibilityIsIgnored.
David Tseng
Reported 2012-05-07 14:13:21 PDT
Correct logical error in accessibilityIsIgnored.
Attachments
Patch (3.97 KB, patch)
2012-05-07 14:13 PDT, David Tseng
no flags
Patch (2.08 KB, patch)
2012-05-07 15:00 PDT, David Tseng
no flags
Patch (2.07 KB, patch)
2012-05-07 15:36 PDT, David Tseng
no flags
David Tseng
Comment 1 2012-05-07 14:13:43 PDT
chris fleizach
Comment 2 2012-05-07 14:21:43 PDT
looks ok after you fix style error
David Tseng
Comment 3 2012-05-07 15:00:52 PDT
chris fleizach
Comment 4 2012-05-07 15:07:45 PDT
Comment on attachment 140598 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=140598&action=review > Source/WebCore/ChangeLog:5 > + incorrect indendation here
David Tseng
Comment 5 2012-05-07 15:36:57 PDT
Alexey Proskuryakov
Comment 6 2012-05-07 16:08:16 PDT
*** Bug 85831 has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 7 2012-05-07 17:09:00 PDT
Comment on attachment 140606 [details] Patch Clearing flags on attachment: 140606 Committed r116376: <http://trac.webkit.org/changeset/116376>
WebKit Review Bot
Comment 8 2012-05-07 17:09:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.