Correct logical error in accessibilityIsIgnored. https://bugs.webkit.org/show_bug.cgi?id=85828

Patch by David Tseng <dtseng@google.com> on 2012-05-07
Reviewed by Chris Fleizach.

Covered by existing tests.

* accessibility/AccessibilityMenuListOption.cpp:
(WebCore::AccessibilityMenuListOption::accessibilityIsIgnored):
* accessibility/AccessibilityMenuListPopup.cpp:
(WebCore::AccessibilityMenuListPopup::accessibilityIsIgnored):

git-svn-id: svn://svn.chromium.org/blink/trunk@116376 bbb929c8-8fbe-4397-9dbb-9b2b20218538