third_party/WebKit/Source/WebCore/accessibility/AccessibilityMenuListOption.cpp
@@ -99,7 +99,7 @@ bool AccessibilityMenuListOption::canSetSelectedAttribute() const
 
 bool AccessibilityMenuListOption::accessibilityIsIgnored() const
 {
-    return accessibilityPlatformIncludesObject() != IgnoreObject;
+    return accessibilityPlatformIncludesObject() != IncludeObject;
 }
 
 LayoutRect AccessibilityMenuListOption::elementRect() const
