third_party/WebKit/Source/WebCore/accessibility/AccessibilityMenuListPopup.cpp
@@ -65,7 +65,7 @@ bool AccessibilityMenuListPopup::isEnabled() const
 
 bool AccessibilityMenuListPopup::accessibilityIsIgnored() const
 {
-    return accessibilityPlatformIncludesObject() != IgnoreObject;
+    return accessibilityPlatformIncludesObject() != IncludeObject;
 }
 
 AccessibilityMenuListOption* AccessibilityMenuListPopup::menuListOptionAccessibilityObject(HTMLElement* element) const
